# japr

./: .japr.yaml  CONTRIBUTING.md  Dockerfile  README.md  check.py  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
.github/workflows/: build.yml  publish.yml
check_providers/: __init__.py  ci_check_provider.py  csharp_check_provider.py  git_check_provider.py  github_check_provider.py  license_check_provider.py  python_check_provider.py  readme_check_provider.py
src/: generate_ruleset_docs.py  main.py
src/check_providers/: __init__.py  ci_check_provider.py  contributing_check_provider.py  csharp_check_provider.py  git_check_provider.py  github_check_provider.py  javascript_check_provider.py  license_check_provider.py  python_check_provider.py  readme_check_provider.py
src/japr/: check.py  japr.py  template_util.py  util.py
src/japr/check_providers/: __init__.py  ci_check_provider.py  contributing_check_provider.py  csharp_check_provider.py  git_check_provider.py  github_check_provider.py  javascript_check_provider.py  license_check_provider.py  python_check_provider.py  readme_check_provider.py  shell_check_provider.py  terraform_check_provider.py
test/: test_failure_scenarios.py  test_pass_scenarios.py  test_scenarios.py
test/scenarios/failures/CI001/: README.md
test/scenarios/failures/CS002/: README.md  cs002.csproj
test/scenarios/failures/CS003/: README.md  cs003.csproj
test/scenarios/failures/CS004/: README.md  cs004.csproj
test/scenarios/failures/CT001/: README.md
test/scenarios/failures/GH003/: README.md
test/scenarios/failures/JS002/: README.md  package.json
test/scenarios/failures/LI001/: README.md
test/scenarios/failures/PY001/: README.md
test/scenarios/failures/PY002/: README.md  pyproject.toml
test/scenarios/failures/PY003/: README.md
test/scenarios/failures/PY003_setup_cfg/: README.md
test/scenarios/failures/RE001/: notes.md
test/scenarios/failures/RE002/: README.md
test/scenarios/failures/RE003/: README.md
test/scenarios/failures/RS004/: Cargo.toml
test/scenarios/failures/SH001_ksh/: README.md
test/scenarios/failures/SH002/: README.md
test/scenarios/passes/PY002_pyproject/: README.md  pyproject.toml
test/scenarios/passes/PY003/: pyproject.toml
(+43 files in other folders)
