[tool.poetry]
name = "health-check"
version = "0.1.0"
description = "A health check for your projects"
authors = ["Jamie Read <hey@jread.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "health_check"}]

[tool.poetry.dependencies]
python = "^3.10"
gitpython = "^3.1.30"
toml = "^0.10.2"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pylama = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
