[tool.poetry]
name = "py002-pyproject"
version = "0.1.0"
description = ""
authors = ["Jamie Read <hey@jread.dev>"]
readme = "README.md"
packages = [{include = "py002_pyproject"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
